Fix footer text being wrong color

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,6 +4,10 @@
     padding-top: 1rem;
     padding-bottom: 1.5rem;
 
+    h2, h3, h4 {
+        color: #fff;
+    }
+
     &__container {
         max-width: 70rem;
         margin-right: auto;
